Added section with user counter, add button and select box

--- a/index.html
+++ b/index.html
@@ -12,6 +12,22 @@
 	<title>users</title>
 </head>
 <body>
+<section class="d-flex justify-content-between  mt-5">
+	<div class="d-flex">
+		<h1 class="mb-4 s4_h1title align-self-center">Users <span>(128)</span></h1>
+		<button class="btn s4_adduser mt-1 ml-4 rounded-circle"><i class="fas fa-plus"></i></button>
+	</div>
+	<form action="" class="mt-1 s4_usersearch d-flex">
+		<span class="s4_sorttitel">Sort: </span>
+		<select class="form-control ml-3">
+			<option><span>Active first</span></option>
+			<option>Active first</option>
+			<option>Active first</option>
+			<option>Active first</option>
+			
+		</select>
+	</form>
+</section>
 <section>
 	<div class="col-12 pb-3">
 		<div class="row">
