Added responsief design to section with user counter, select box,...

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<title>users</title>
 </head>
 <body>
-<section class="d-flex justify-content-between  mt-5">
+<section class="d-flex justify-content-between flex-column flex-lg-row mt-5">
 	<div class="d-flex">
 		<h1 class="mb-4 s4_h1title align-self-center">Users <span>(128)</span></h1>
 		<button class="btn s4_adduser mt-1 ml-4 rounded-circle"><i class="fas fa-plus"></i></button>
