--- a/index.html
+++ b/index.html
@@ -15,7 +15,90 @@
 <section class="d-flex justify-content-between flex-column flex-lg-row mt-5">
 	<div class="d-flex">
 		<h1 class="mb-4 s4_h1title align-self-center">Users <span>(128)</span></h1>
-		<button class="btn s4_adduser mt-1 ml-4 rounded-circle"><i class="fas fa-plus"></i></button>
+		<button class="btn s4_adduser mt-1 ml-4 rounded-circle" data-toggle="modal" data-target=".user-modal-lg"><i class="fas fa-plus"></i></button>
+		<div class="modal fade user-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+			<div class="modal-dialog modal-lg">
+				<div class="modal-content py-4 px-4">
+					<h4 class="pb-3">Gebruiker toevoegen:</h4>
+					<form action="wis">
+						<div class="form-row">
+							<div class="col pl-0">
+								<label class="mb-1">Naam:</label>
+								<input type="text" class="form-control" placeholder="Voornaam" required>
+							</div>
+							<div class="col">
+								<label class="mb-1"> Achternaam:</label>
+								<input type="text" class="form-control" placeholder="Achternaam" required>
+							</div>
+						</div>
+						<div class="form-row mt-3">
+							<label for="inputState">Functie:</label>
+							<select id="inputState" class="form-control">
+								<option selected>CEO</option>
+								<option>UW Designer</option>
+								<option>Web Designer</option>
+								<option>Account Manager</option>
+								<option>Project Manager</option>
+								<option>Product Designer</option>
+								<option>Graphic Designer</option>
+							</select>
+						</div>
+						<div class="form-row mt-3">
+							<label for="inputState">Klas:</label>
+							<select id="inputState" class="form-control">
+								<option selected>1e middelbaar</option>
+								<option>2de middelbaar</option>
+								<option>3de middelbaar</option>
+								<option>4de middelbaar</option>
+								<option>5de middelbaar</option>
+								<option>6de middelbaar</option>
+							</select>
+						</div>
+						<div class="form-row mt-3">
+							<div class="col pl-0">
+								<label class="mb-1">Geboortedatum:</label>
+								<input id="datum" type="date" value="2019-01-11" required>
+							</div>
+						</div>
+						<div class="form-row mt-3">
+							<label for="inputAddress">Adres:</label>
+							<input type="text" class="form-control" id="inputAddress" placeholder="Straat/nr" required>
+						</div>
+						<div class="form-row mt-3">
+							<div class="col pl-0">
+								<label for="inputPostcode">Postcode:</label>
+								<input type="text" class="form-control" id="inputPostcode" placeholder="Postcode" required>
+							</div>
+							<div class="col">
+								<label for="inputStad">Stad:</label>
+								<input type="text" class="form-control" id="inputStad" placeholder="Stad" required>
+							</div>
+						</div>
+						<div class="form-row mt-3">
+								<label for="inputEmail4">Email</label>
+								<input type="email" class="form-control" id="inputEmail4" placeholder="Email" required>
+						</div>
+						<div class="form-row mt-3">
+							<div class="col pl-0">
+								<label for="inputState">Telefoon:</label>
+								<input type="tel" class="form-control" placeholder="Telefoon" required>
+							</div>
+						</div>
+						<div class="form-row mt-3">
+							<div class="col pl-0">
+								<p>Opmerkingen:</p>
+								<textarea name="opmerking" id="opmerking" class="w-100" rows="3"></textarea>
+							</div>
+						</div>
+						<div class="d-flex justify-content-center">
+							<button type="submit" class="btn btn-secondary mt-3 mr-2"><i class="fas fa-plus"></i> Toevoegen</button>
+							<input type="reset" class="btn btn-secondary s4_resetbutton mt-3">
+						</div>
+
+					</form>
+				</div>
+			</div>
+		</div>
 	</div>
 	<form action="" class="mt-1 s4_usersearch d-flex">
 		<span class="s4_sorttitel">Sort: </span>
