--- a/index.html
+++ b/index.html
@@ -473,6 +473,15 @@
 			</div>
 		</div>
 	</div>
+	<nav class="d-flex justify-content-center align-items-center my-4" aria-label="pagination">
+		<ul class="pagination">
+			<li class="page-item"><a class="d-none page-link text-dark" href="#">Previous</a></li>
+			<li class="page-item"><a class="page-link text-dark" href="#">1</a></li>
+			<li class="page-item"><a class="page-link text-dark" href="#">2</a></li>
+			<li class="page-item"><a class="page-link text-dark" href="#">3</a></li>
+			<li class="page-item"><a class="page-link text-dark" href="#">Next</a></li>
+		</ul>
+	</nav>
 </section>
 <script src="js/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
