--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 		<div class="modal fade user-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
 			<div class="modal-dialog modal-lg">
 				<div class="modal-content py-4 px-4">
+					<button type="button" class="close ml-auto" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
 					<h4 class="pb-3">Gebruiker toevoegen:</h4>
 					<form action="wis">
 						<div class="form-row">
